client/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
<<<<<<< HEAD
      - image: mmmehulll/codebit_client:0.1.0
=======
      - image: mmmehulll/codebit_client
>>>>>>> 34a8bd493d63605a2b4bb93adba3677610d2fba7
        name: frontend
        ports:
        - containerPort: 80
